# midi-gen-mcp

./: Makefile  PLANNING.md  README.md  design_doc.md  main.py  pyproject.toml  requirements.txt
src/midi_gen_mcp/: __init__.py  chord_parser.py  midi_export.py  server.py  state.py
src/midi_gen_mcp/tools/: __init__.py  harmony.py  note.py  song.py  structure.py  track.py  utility.py  validation.py
tests/: __init__.py  test_chord_parser.py  test_harmony_tools.py  test_midi_export.py  test_note.py  test_song.py  test_state.py  test_structure.py  test_track.py  test_validation_tools.py
