[project]
name = "midi-gen-mcp"
version = "0.1.0"
description = "MCP server for AI-integrated DAW with low-level MIDI operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "mido>=1.3.0",
    "pychord>=0.6.0",
]

[project.scripts]
midi-gen-mcp = "midi_gen_mcp.server:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
